Se actualiza con más datos de pureba

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,10 @@
     <option value="All Customers">All Customers</option>
     <option value="Petit Auto">Petit Auto</option>
     <option value="Kelly's Gift Shop">Kelly's Gift Shop</option>
-    
+    <option value="Mini Gifts Distributors Ltd.">Mini Gifts Distributors Ltd.</option>
+    <option value="giftsbymail.co.uk">giftsbymail.co.uk</option>
+    <option value="Euro+ Shopping Channel">Euro+ Shopping Channel</option>
+    <option value="Danish Wholesale Imports">Danish Wholesale Imports</option>
 </select>
 <!-- <app-pentaho-dashboard [id]="'content1'" [dashboardPath]="'public/MDuran/test_params.wcdf'"></app-pentaho-dashboard> -->
 <app-pentaho-dashboard [id]="'content1'" [dashboardPath]="'public/MDuran/test_params.wcdf'" [setDefaults]="true" [pentahoParamsName]="['getValue']" [params]="[selectCustumer]" [externalHtmlId]="['drop']"></app-pentaho-dashboard>
