--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,5 +17,5 @@
     <option value="Euro+ Shopping Channel">Euro+ Shopping Channel</option>
     <option value="Danish Wholesale Imports">Danish Wholesale Imports</option>
 </select>
-<!-- <app-pentaho-dashboard [id]="'content1'" [dashboardPath]="'public/MDuran/test_params.wcdf'"></app-pentaho-dashboard> -->
-<app-pentaho-dashboard [id]="'content1'" [dashboardPath]="'public/MDuran/test_params.wcdf'" [setDefaults]="true" [pentahoParamsName]="['getValue']" [params]="[selectCustumer]" [externalHtmlId]="['drop']"></app-pentaho-dashboard>
+<app-pentaho-dashboard [id]="'content1'" [dashboardPath]="'public/MDuran/test_params.wcdf'"></app-pentaho-dashboard>
+<!-- <app-pentaho-dashboard [id]="'content1'" [dashboardPath]="'public/MDuran/test_params.wcdf'" [hasParams]="true" [setDefaults]="true" [pentahoParamsName]="['getValue']" [params]="[selectCustumer]" [externalHtmlId]="['drop']"></app-pentaho-dashboard> -->
