Agregué una p faltante en el html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,5 @@
     <option value="Danish Wholesale Imports">Danish Wholesale Imports</option>
 </select>
 <app-pentaho-dashboard [id]="'content1'" [dashboardPath]="'public/MDuran/test_params.wcdf'"></app-pentaho-dashboard>
+<p>Hello world</p>
 <!-- <app-pentaho-dashboard [id]="'content1'" [dashboardPath]="'public/MDuran/test_params.wcdf'" [hasParams]="true" [setDefaults]="true" [pentahoParamsName]="['getValue']" [params]="[selectCustumer]" [externalHtmlId]="['drop']"></app-pentaho-dashboard> -->
